infrastructure/database/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    app: db-ingestor
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
